<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    tools:context=".SettingsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/yearTitle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/setting_element_height"
                android:fontFamily="sans-serif"
                android:gravity="center|start"
                android:text="@string/title_edt_settings"
                android:textColor="?attr/colorControlNormal"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/setting_element_height"
                android:background="?layoutBackground"
                android:clickable="true"
                android:contextClickable="true"
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/settings_element_space">


                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:fontFamily="sans-serif"
                    android:gravity="center"
                    android:text="@string/setting_year"
                    android:textColor="?attr/actionMenuTextColor"
                    android:textSize="20sp" />

                <Spinner
                    android:id="@+id/yearChoice"
                    android:layout_width="20dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:entries="@array/year_array"
                    android:spinnerMode="dropdown" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/setting_element_height"
                android:background="?layoutBackground"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif"
                    android:gravity="center"
                    android:text="@string/settings_get_back_to_same_pos"
                    android:textColor="?attr/actionMenuTextColor"
                    android:textSize="20sp" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/keepPositionOfEdt"
                    android:layout_width="55dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="30dp"
                    android:checked="true"
                    android:gravity="center_vertical"
                    android:showText="false"
                    android:switchMinWidth="55dp"
                    tools:checked="true" />
            </LinearLayout>

            <TextView
                android:id="@+id/notificationText"
                android:layout_width="match_parent"
                android:layout_height="@dimen/setting_element_height"
                android:fontFamily="sans-serif"
                android:gravity="center|start"
                android:text="@string/setting_title_notif"
                android:textColor="?attr/colorControlNormal"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/setting_element_height"
                android:background="?layoutBackground"
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/settings_element_space">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif"
                    android:gravity="center"
                    android:text="@string/setting_new_edt"
                    android:textColor="?attr/actionMenuTextColor"
                    android:textSize="20sp" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/notifNewEdt"
                    android:layout_width="55dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="30dp"
                    android:checked="true"
                    android:gravity="center_vertical"
                    android:showText="false"
                    android:switchMinWidth="55dp"
                    tools:checked="true" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/setting_element_height"
                android:background="?layoutBackground"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif"
                    android:gravity="center"
                    android:text="@string/setting_notif_change_edt"
                    android:textColor="?attr/actionMenuTextColor"
                    android:textSize="20sp" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/notifEdtChanged"
                    android:layout_width="55dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="30dp"
                    android:checked="true"
                    android:gravity="center_vertical"
                    android:showText="false"
                    android:switchMinWidth="55dp"
                    tools:checked="true" />
            </LinearLayout>

            <TextView
                android:id="@+id/infos"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:fontFamily="sans-serif"
                android:gravity="bottom|center_horizontal"
                android:text="@string/prevention_text"
                android:textColor="?attr/actionMenuTextColor"
                android:textSize="15sp" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>